--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .cover{
-    height: 10vh;
+    height: 70px;
     
     background: rgba(76,76,76,1);
     background: -moz-linear-gradient(top, rgba(76,76,76,1) 0%, rgba(0,0,0,1) 0%, rgba(102,102,102,1) 30%, rgba(71,71,71,1) 48%, rgba(43,43,43,1) 76%, rgba(28,28,28,1) 91%, rgba(19,19,19,1) 100%);
@@ -12,32 +12,72 @@
 }
 
 .cover img{
-    width: 10%;
-    margin-top: -10px;
+    width: 130px;
+    margin-top: -12px;
     margin-left: 180px;
+    position: absolute;
+}
+
+.parallax img{
+    height: 300px;
+    width: 100%;
 }
 
 .main-page{
-    background-color: #DFDFDF;   
+    background-color: lightgray;
 }
 
-#information{
+.background-profile{
+    width: 80%;
+}
+.background-profile-info{
     background-color: white;
+    margin-top: -80px;
 }
 
-.col-md-6 h1{
-    font-weight: bold;
-    font-size: 2em;
-    color: black;
+.col-md-3 img{
+    height: 250px;
+}
+.col-md-8 h3{
+    margin-top: -4px;
+    color: white;
 }
 
-.col-md-6 h3{
-    font-size: 1.4em;
-    margin-top: -10px;
-}
-
-.col-md-6 h4{
-    font-size: 1.1em;
-    color: darkgrey;
+.col-md-8 h5{
+    color: darkgray;
     margin-top: -5px;
+}
+
+.col-md-6 h5{
+    color: black;
+    margin-top: 9px;
+}
+
+.col-md-2 h6{
+    color: darkgray;
+}
+
+
+.col-md-8 h3:nth-child(1){
+    font-weight: bold;
+}
+
+#line{
+    border-width: 1px;
+    border-color: black;
+    border-style: dashed;
+}
+
+
+.Specific-Contact{
+    margin-top: -20px;
+    background-color: rgb(242,242,242);
+    height: 70px;
+}
+
+.background-summary{
+    margin-top: 10px;
+    width: 80%;
+    height: 300px;
+    background-color: white;
 }
