--- a/css/style.css
+++ b/css/style.css
@@ -21,8 +21,14 @@
 .parallax img{
     height: 300px;
     width: 100%;
+    position: relative;
+	display: inline-block;
 }
 
+.btn-edit-cover{
+    background: transparent;
+    font-size: 50px;
+}
 .main-page{
     background-color: lightgray;
 }
@@ -32,6 +38,9 @@
     border: solid 1px black;
     padding-left: 0px;
     padding-right: 0px;
+    -webkit-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
 }
 
 .background-profile-info{
@@ -61,6 +70,19 @@
     display: none;
 }
 
+.editCover {
+	padding-top: 150px;	
+	padding-right: 620px;
+	position: absolute;
+	right: 0;
+	top: 0;
+	display: none;
+    font-size: 50px;
+}
+
+.parallax:hover .editCover {
+	display: block;
+}
 
 .background-profile-info:hover .editButton{
     display: block;
@@ -133,10 +155,13 @@
 }
 
 .background{
-    margin-top: 10px;
+    margin-top: 40px;
     width: 80%;
     background-color: white;
     border: solid 1px black;
+    -webkit-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
 }
 
 .container{
@@ -155,9 +180,12 @@
 }
 
 .btnContact{
+    text-align: center;
     margin-top: 5px;
-    height: 30px;
     margin-bottom: 5px;
+    -webkit-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
 }
 
 #contact-linked:hover{
@@ -184,11 +212,6 @@
 
 .background-title{
     margin-top: 25px;    
-}
-
-ul
-{
-    list-style-type: none;
 }
 
 .edit-form{
@@ -231,21 +254,27 @@ ul
     margin-left: -120px;
 }
 
-
-#btnAdd{
-    border:1px solid #0c799e;
-    width:60px;
-    padding:5px;
-    font-size:14px;
-    font-weight:700;
+.btn-circle{
+    width: 45px;
+    height: 45px;
+    text-align: center;
+    padding: 6px 0;
+    font-size: 20px;
+    line-height: 1.45;
+    border-radius: 30px;
+}
+  
+.btn-Add{
     color:#fff;
-    border-radius:3px;
-    background:linear-gradient(to bottom,#59d0f8 5%,#49c0e8 100%);
-    cursor:pointer
+    background:linear-gradient(to bottom,darkgrey 5%,lightgray 100%);
+    cursor:pointer;
+    -webkit-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
 }
 
-#btnAdd:hover {
-    background:linear-gradient(to bottom,#49c0e8 5%,#59d0f8 100%)
+.btn-Add:hover {
+    background:linear-gradient(to bottom,white 5%,whitesmoke 100%)
 }
 
 #dialog form{
