--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,7 @@
 	top: 0;
 	display: none;
     font-size: 50px;
+    color: dodgerblue;
 }
 
 .parallax:hover .editCover {
@@ -262,30 +263,23 @@
     font-size: 20px;
     line-height: 1.45;
     border-radius: 30px;
+    background: transparent;
 }
   
-.btn-Add{
-    color:#fff;
-    background:linear-gradient(to bottom,darkgrey 5%,lightgray 100%);
-    cursor:pointer;
-    -webkit-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
-    box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.75);
+
+.btn-circle:hover {
+    background:whitesmoke;
 }
 
-.btn-Add:hover {
-    background:linear-gradient(to bottom,white 5%,whitesmoke 100%)
-}
-
-#dialog form{
+.dialog form{
     text-align: center;
 }
 
-#dialog form input{
+.dialog form input{
     color: black;
 }
 
-#submit{
+.submit{
     width:30%;
     border:1px solid #59b4d4;
     background:#0078a3;
@@ -296,7 +290,7 @@
     cursor:pointer
 }
 
-#submit:hover {
+.submit:hover {
     border:1px solid #666;
     background:#555;
     color:#fff
